# Design-Pattern---UC2

./: .gitignore  CONFIGURATION_SUMMARY.md  CONFIG_GUIDE.md  IMPLEMENTATION_GUIDE.md  QUICK_REFERENCE.md  README.md  action.py  config.py  config_architecture.txt  context.py  handler.py  interpreter.py  main.py  parseTree.py  pyproject.toml  requirements.txt  sample_rules.txt  sample_shipping_rules.txt  template.py  test_integration.py
