[project]
name = "spring2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.4.1",
    "gradio>=6.4.0",
    "jq>=1.11.0",
    "kagglehub[pandas-datasets]>=1.0.0",
    "langchain>=1.2.7",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.7",
    "langchain-huggingface>=1.2.0",
    "langchain-ollama>=1.0.1",
    "langchain-text-splitters>=1.1.0",
    "langchain-tools>=0.1.34",
    "matplotlib>=3.10.8",
    "ollama>=0.6.1",
    "plantuml>=0.3.0",
    "pypdf2>=3.0.1",
    "pythonplantuml>=0.2.1",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.2.2",
    "typer>=0.21.1",
]

[tool.uv.workspace]
members = [
    "DesignPattern/UC2",
]
